--- a/index.html
+++ b/index.html
@@ -38,6 +38,28 @@
             background: yellow;
             color: black;
         }
+        .box{
+            width: 100px;
+            height: 100px;
+            background: red;
+            position: relative;
+            animation-name:move;
+            animation-duration: 2s;
+            animation-timing-function: ease-in-out;
+            animation-delay: 3s;
+            animation-iteration-count: 3;
+            animation-direction: alternate;
+        }
+        @keyframes move{
+            from{
+                left:0;
+                background: red;
+            }
+            to{
+                left: 300px;
+                background: blue;
+            }
+        }
     </style>
 </head>
 <body>
@@ -52,5 +74,6 @@
         <li>css</li>
         <li>js</li>
     </ul>
+    <div class="box">hello</div>
 </body>
 </html>
